css/slider.css
/* ... */
/*--------------------------------------------------------------
2.0 Slider
--------------------------------------------------------------*/
.slider {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.slider__radio {
  display: none;
}
.slider__holder {
  position: relative;
  width: 100%;
  max-width: 600px;
  margin: 0 auto;
  margin-top: 80px;
  text-align: left;
}
@media (max-width: 900px) {
  .slider__holder {
    max-width: 540px;
  }
}
@media (max-width: 600px) {
  .slider__holder {
    margin-top: 60px;
  }
}
.slider__item {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  overflow: hidden;
  width: 100%;
  opacity: 1;
  cursor: pointer;
}
.slider__item-content {
  padding: 40px;
}
@media (max-width: 600px) {
  .slider__item-content {
    padding: 32px 32px;
  }
}
@media (max-width: 375px) {
  .slider__item-content {
    padding: 40px 24px;
  }
}
.slider__item-text {
  padding: 60px 0;
}

/*--------------------------------------------------------------
3.0 Bullets
--------------------------------------------------------------*/
.bullets {
  z-index: 10;
  display: block;
  width: auto;
  height: 10px;
  height: 10px;
  margin: 0 auto;
  margin-top: 48px;
  margin-bottom: 56px;
  text-align: center;
  font-size: 0;
}
@media (max-width: 600px) {
  .bullets {
    margin-top: 32px;
  }
}
.bullets__item {
  display: inline-block;
  width: 10px;
  height: 10px;
  margin: 0 4px;
  border-radius: 6px;
  background: rgba(0, 0, 0, 0.2);
  cursor: pointer;
}
.bullets__item:hover {
  background: #fff;
}

/*--------------------------------------------------------------
4.0 Section
--------------------------------------------------------------*/
.section {
  position: relative;
  width: 100%;
  padding: 120px 24px;
  text-align: center;
}
.section__entry {
  width: 100%;
  max-width: 380px;
  margin: 0 auto;
}
.section__entry--center {
  text-align: center;
}
.section__title {
  display: block;
  padding-bottom: 12px;
}
.section__text {
  display: block;
}

/*--------------------------------------------------------------
5.0 Button
--------------------------------------------------------------*/
.button {
  display: inline-block;
  height: 44px;
  padding: 12px 16px;
  font-weight: 500;
  line-height: 20px;
  color: #fff;
  border-radius: 3px;
  background: rgba(0, 0, 0, 0.2);
}
.button:hover {
  background: rgba(0, 0, 0, 0.1);
}

/*--------------------------------------------------------------
4.0 All Tutorials
--------------------------------------------------------------*/
/*--------------------------------------------------------------
>>> TABLE OF CONTENTS:
----------------------------------------------------------------
1.0 Labs bar
--------------------------------------------------------------*/
/*--------------------------------------------------------------
1.0 Labs bar
--------------------------------------------------------------*/
.labs-bar {
  position: fixed;
  z-index: 1000;
  top: 0;
  right: 0;
  left: 0;
  display: block;
  width: 100%;
  padding: 8px 0px;
  background: rgba(0, 0, 0, 0.2);
}
.labs-bar__inner {
  position: relative;
  display: block;
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 20px;
}
.labs-bar__nav {
  position: relative;
  display: block;
  float: left;
}
.labs-bar__link {
  position: relative;
  display: inline-block;
  padding: 10px;
  padding-left: 30px;
  font-size: 12px;
  font-weight: 700;
  line-height: 20px;
  color: #fff;
  letter-spacing: 0.5px;
  text-transform: uppercase;
}
.labs-bar__link:hover:before {
  left: -16px;
}
.labs-bar__link:before {
  position: absolute;
  top: 50%;
  left: 0;
  display: block;
  width: 24px;
  height: 14px;
  background-image: url("/images/general/arrow__right--white.svg");
  background-repeat: no-repeat;
  background-position: left;
  background-size: cover;
  content: "";
  transform: translateY(-50%);
  transition: all 0.2s ease;
}
.labs-bar__branding {
  display: inline-block;
  font-size: 20px;
  line-height: 20px;
  color: #fff;
}
.labs-bar__logo {
  width: auto;
  height: 18px;
  margin-top: 5px;
  margin-left: 10px;
}
.labs-bar__logo:hover {
  opacity: 0.8;
}
.labs-bar__button {
  float: right;
  padding: 10px 16px;
  font-size: 12px;
  font-weight: 700;
  line-height: 20px;
  color: #fff;
  border-radius: 3px;
  background: rgba(0, 0, 0, 0.2);
  letter-spacing: 0.5px;
  text-transform: uppercase;
}
.labs-bar__button:hover {
  background: rgba(0, 0, 0, 0.1);
}

